# numa-pompiliu

./: .gitignore  AUDIT.md  CLAUDE.md  LICENSE  README.md  landing.html  pyproject.toml
.atl/: .skill-registry.cache.json  skill-registry.md
backend/: auth.py  database.py  enums.py  gmail_client.py  llm.py  middleware.py  patch_rag_reindex_all.py  server.py  stripe_integration.py
claw-memory/: README.md  claw_memory.py  fact_extractor.py  query.py
claw-memory/benchmarks/: benchmark.py  code_domain_results.json  cross_domain_results.json
claw-memory/cross-domain/: validate.py
claw-memory/cross-domain/corpus/: 01-manual-k700.md  02-incidentes-k700.md  03-normativa-prl.md  04-entrevista-pepe-garcia.md
frontend/: capture.es.html  capture.html  index.es.html  index.html  security.es.html  security.html
frontend/static/: app.js  manifest.json  service-worker.js  styles.css
implementation/numa-benchmark/: requirements.txt
implementation/numa-benchmark/numa_bench/: __init__.py  metrics.py  modes.py  questions.py  report.py  run.py
implementation/numa-capture/: requirements.txt
implementation/numa-capture-web/: .env.template  README.md  numa_capture.db  start.sh
implementation/numa-capture-web/backend/: __init__.py  database.py  llm.py  rag_integration.py  requirements.txt  server.py
implementation/numa-capture-web/tests/: test_api.py
implementation/numa-rag-server/: README.md  __main__.py  requirements.txt
paper/: numa_paper_v3.tex
protocols/: 01-capture.md  02-structure.md  03-validation.md  04-access.md  05-maintenance.md  05-negative-knowledge.md
(+15 files in other folders)
